# BRAINSTools

AutoWorkup/: fillDB.py  makePlots.py  parseDTIPrepXML.py
AutoWorkup/utilities/: FreesurferLobesColorLUT.ctbl  FreesurferLobesColorLUT.txt
DWIConvert/TestSuite/: CMakeLists.txt
